--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,6 +18,7 @@ body{
     no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
+background-size: cover;
     
 }
 
@@ -36,4 +37,11 @@ transform: translate(-50%, -50%);
     height: 627px;
     width: 311px;
     background:  url(../imagens/frame-iphone.png) no-repeat;
+}
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 21px;
+    width: 269px;
+    height: 472px;
 }
